# UTBotPythonSBFT2024

./: .gitignore  .gitmodules  README.md  pyproject.toml
python_tool_competition_2024_utbot_python/: check_usvm.py  config.py  generator.py
targets/: sum_array.py  unsafe.py
targets/sub_example/: example4.py
